--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-kakao-login": "^2.1.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
