--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-kakao-login": "^2.1.1",
+    "react-modal": "^3.16.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
