--- a/.env
+++ b/.env
@@ -1,8 +1,17 @@
-REACT_APP_API_KEY = AIzaSyCPW2dU6qcXflegzuDU7VTS8TCqb3qnW-M
-REACT_APP_AUTH_DOMAIN = dotzip-a56a7.firebaseapp.com
-REACT_APP_DATABASE_URL =
-REACT_APP_PROJECT_ID = dotzip-a56a7
-REACT_APP_STORAGE_BUCKET = dotzip-a56a7.appspot.com
-REACT_APP_MESSAGIN_ID = 753687515964
-REACT_APP_APP_ID = 1:753687515964:web:e9a47d7c8fdcc5d677c439
-REACT_APP_MEASUR_ID =G-WCQYR8ZQ03
+#dotZip1
+# REACT_APP_API_KEY = AIzaSyCPW2dU6qcXflegzuDU7VTS8TCqb3qnW-M
+# REACT_APP_AUTH_DOMAIN = dotzip-a56a7.firebaseapp.com
+# REACT_APP_DATABASE_URL =
+# REACT_APP_PROJECT_ID = dotzip-a56a7
+# REACT_APP_STORAGE_BUCKET = dotzip-a56a7.appspot.com
+# REACT_APP_MESSAGIN_ID = 753687515964
+# REACT_APP_APP_ID = 1:753687515964:web:e9a47d7c8fdcc5d677c439
+# REACT_APP_MEASUR_ID =G-WCQYR8ZQ03
+#dotZIP2
+REACT_APP_API_KEY = AIzaSyCkL0QKs6mWKesDDAstE8mMrfWAf7feDBA
+REACT_APP_AUTH_DOMAIN = dotzip-15661.firebaseapp.com
+REACT_APP_PROJECT_ID = dotzip-15661
+REACT_APP_STORAGE_BUCKET = dotzip-15661.appspot.com
+REACT_APP_MESSAGIN_ID = 604085170873
+REACT_APP_APP_ID = 1:604085170873:web:8f0a9e6525e3e09cd36168
+REACT_APP_MEASUR_ID = G-0VZX6E8CWF
