--- a/.env
+++ b/.env
@@ -8,10 +8,17 @@
 # REACT_APP_APP_ID = 1:753687515964:web:e9a47d7c8fdcc5d677c439
 # REACT_APP_MEASUR_ID =G-WCQYR8ZQ03
 #dotZIP2
-REACT_APP_API_KEY = AIzaSyCkL0QKs6mWKesDDAstE8mMrfWAf7feDBA
-REACT_APP_AUTH_DOMAIN = dotzip-15661.firebaseapp.com
-REACT_APP_PROJECT_ID = dotzip-15661
-REACT_APP_STORAGE_BUCKET = dotzip-15661.appspot.com
-REACT_APP_MESSAGIN_ID = 604085170873
-REACT_APP_APP_ID = 1:604085170873:web:8f0a9e6525e3e09cd36168
-REACT_APP_MEASUR_ID = G-0VZX6E8CWF
+# REACT_APP_API_KEY = AIzaSyCkL0QKs6mWKesDDAstE8mMrfWAf7feDBA
+# REACT_APP_AUTH_DOMAIN = dotzip-15661.firebaseapp.com
+# REACT_APP_PROJECT_ID = dotzip-15661
+# REACT_APP_STORAGE_BUCKET = dotzip-15661.appspot.com
+# REACT_APP_MESSAGIN_ID = 604085170873
+# REACT_APP_APP_ID = 1:604085170873:web:8f0a9e6525e3e09cd36168
+# REACT_APP_MEASUR_ID = G-0VZX6E8CWF
+REACT_APP_API_KEY = AIzaSyAEDeDRgCssSSfsi83uTbPOwWUsVW6RHXE
+REACT_APP_AUTH_DOMAIN = dotzip-7bc6f.firebaseapp.com
+REACT_APP_PROJECT_ID = dotzip-7bc6f
+REACT_APP_STORAGE_BUCKET = dotzip-7bc6f.appspot.com
+REACT_APP_MESSAGIN_ID = 693179609006
+REACT_APP_APP_ID = 1:693179609006:web:dabc55000e97c9a914a23f
+REACT_APP_MEASUR_ID = G-20BFP70301
