--- a/.env
+++ b/.env
@@ -15,10 +15,19 @@
 # REACT_APP_MESSAGIN_ID = 604085170873
 # REACT_APP_APP_ID = 1:604085170873:web:8f0a9e6525e3e09cd36168
 # REACT_APP_MEASUR_ID = G-0VZX6E8CWF
-REACT_APP_API_KEY = AIzaSyAEDeDRgCssSSfsi83uTbPOwWUsVW6RHXE
-REACT_APP_AUTH_DOMAIN = dotzip-7bc6f.firebaseapp.com
-REACT_APP_PROJECT_ID = dotzip-7bc6f
-REACT_APP_STORAGE_BUCKET = dotzip-7bc6f.appspot.com
-REACT_APP_MESSAGIN_ID = 693179609006
-REACT_APP_APP_ID = 1:693179609006:web:dabc55000e97c9a914a23f
-REACT_APP_MEASUR_ID = G-20BFP70301
+#개인용
+REACT_APP_API_KEY = AIzaSyA9umGw6MHyVQrnbkWVM7vc1pkO7Q8TC58
+REACT_APP_AUTH_DOMAIN = hyun-c620f.firebaseapp.com
+REACT_APP_PROJECT_ID = hyun-c620f
+REACT_APP_STORAGE_BUCKET = hyun-c620f.appspot.com
+REACT_APP_MESSAGIN_ID = 1056195945018
+REACT_APP_APP_ID = 1:1056195945018:web:1de919c5d7ccf925c7cb03
+REACT_APP_MEASUR_ID = G-LW49C4FXB7
+
+  apiKey: "AIzaSyA9umGw6MHyVQrnbkWVM7vc1pkO7Q8TC58",
+  authDomain: "hyun-c620f.firebaseapp.com",
+  projectId: "hyun-c620f",
+  storageBucket: "hyun-c620f.appspot.com",
+  messagingSenderId: "1056195945018",
+  appId: "1:1056195945018:web:1de919c5d7ccf925c7cb03",
+  measurementId: "G-LW49C4FXB7"
