--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.22.2",
     "force": "^0.0.3",
     "html2canvas": "^1.4.1",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
